Behaviour modification for interpolation points